# parsec

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: mas-release.yml  release.yml
screenshots/: screenshot-1.html  screenshot-2.html  screenshot-3.html  screenshot-4.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.mas.plist  Info.plist  build.rs  tauri.conf.json  tauri.mas.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_converter.rs  clipboard_helper.m  commands.rs  dock_menu.rs  escape_monitor.rs  file_queue.rs  file_storage.rs  frontmost.rs  history.rs  hotkey.rs  lib.rs  login_item.rs  login_item_helper.m  main.rs  model_registry.rs  paster.rs  permissions_helper.m  recorder.rs  screen_helper.m  state.rs  transcriber.rs  tray.rs  tray_icons.rs  updater.rs  windows.rs
src-tauri/src/plugins/: mac_rounded_corners.rs  mod.rs
src/components/: History.tsx  LevelMeter.tsx  Onboarding.tsx  RecordingOverlay.tsx  Settings.tsx  Waveform.tsx
src/components/settings/: AboutPage.tsx  AppearancePage.tsx  FilesPage.tsx  GeneralPage.tsx  ModelPage.tsx  OutputPage.tsx  PermissionsPage.tsx  RecordingPage.tsx  UpdatesPage.tsx  shared.tsx
