[package]
name = "audioshift"
version = "0.1.2"
description = "AudioShift - local voice to text transcription"
authors = ["you"]
edition = "2021"

[lib]
name = "audioshift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
anyhow = "1"
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread"] }
parking_lot = "0.12"
parakeet-rs = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
macos-accessibility-client = "0.0.1"
