[package]
name = "audioshift"
version = "1.0.0"
description = "AudioShift - local voice to text transcription"
authors = ["Aid Arslanagic"]
edition = "2021"

[lib]
name = "audioshift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["updater"]
updater = ["dep:tauri-plugin-updater"]
mas = []

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [ "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
anyhow = "1"
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread"] }
parking_lot = "0.12"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
num_cpus = "1"

[target.'cfg(target_os = "macos")'.dependencies]
parakeet-rs = "0.3"
whisper-rs = { version = "0.15", features = ["metal"] }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
macos-accessibility-client = "0.0.1"
core-graphics = "0.24"
cocoa = "0.26"
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
parakeet-rs = "0.3"
whisper-rs = "0.15"

[target.'cfg(windows)'.dependencies]
parakeet-rs = { version = "0.3", features = ["directml"] }
whisper-rs = "0.15"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = "2"
